# aurora-os

./: BUILD.md  README.md
.github/workflows/: build.yml
build-system/: Dockerfile  build.sh  packages.x86_64
desktop-environment/app-launcher/: aurora-launcher.py
desktop-environment/compositor/: aurora-compositor.desktop  meson.build
desktop-environment/compositor/src/: animation.c  config.c  config.h  decoration.c  input.c  layer_shell.c  main.c  output.c  server.c  server.h  view.c  xdg_shell.c
desktop-environment/panel/: aurora-panel.py
desktop-environment/settings/: aurora-settings.py
desktop-environment/widgets/: aurora-widgets.py
docs/: ARCHITECTURE.md
installer/: post-install.sh
installer/calamares/: settings.conf
installer/calamares/branding/aurora/: branding.desc  show.qml
installer/calamares/modules/: aurora-post-install.conf
themes/gtk/: index.theme
themes/gtk/gtk-3.0/: gtk.css
themes/gtk/gtk-4.0/: gtk.css
themes/plymouth/: aurora.plymouth  aurora.script
